--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header>
-        <h2 class="logo-title">Dogram</h2>
+        <h2 class="logo-title">D o g r a m</h2>
     </header>
     <main class="main-content">
         <section class="details-container">
             <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
-            <span class="details-title">Don't expect from me much.</span>
+            <span class="details-title">YYYYYYYY YYYYYYY YY</span>
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
