--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     </header>
     <main class="main-content">
         <section class="details-container">
-            <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
-            <span class="details-title">YYYYYYYY YYYYYYY YY</span>
+            <!-- <div class="details"> -->
+                <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
+                <span class="details-title">YYYYYYYY YYYYYYY YY</span>
+            <!-- </div> -->
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
