--- a/index.html
+++ b/index.html
@@ -21,63 +21,63 @@
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog1.jpg">
+                <a class="thumbnails-anchor" href="images/dog1.jpg" data-details-title="DOG1">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
                     <span class="thumbnails-title">dog1</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog2.jpg">
+                <a class="thumbnails-anchor" href="images/dog2.jpg" data-details-title="DOG2">
                     <img class="thumbnails-image" src="images/dog2.jpg" alt="dog2 image">
                     <span class="thumbnails-title">dog2</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog3.jpg">
+                <a class="thumbnails-anchor" href="images/dog3.jpg" data-details-title="DOG3">
                     <img class="thumbnails-image" src="images/dog3.jpg" alt="dog3 image">
                     <span class="thumbnails-title">dog3</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog4.jpg">
+                <a class="thumbnails-anchor" href="images/dog4.jpg" data-details-title="DOG4">
                     <img class="thumbnails-image" src="images/dog4.jpg" alt="dog4 image">
                     <span class="thumbnails-title">dog4</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog5.jpg">
+                <a class="thumbnails-anchor" href="images/dog5.jpg" data-details-title="DOG5">
                     <img class="thumbnails-image" src="images/dog5.jpg" alt="dog5 image">
                     <span class="thumbnails-title">dog5</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog1.jpg">
+                <a class="thumbnails-anchor" href="images/dog1.jpg" data-details-title="DOG6">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
-                    <span class="thumbnails-title">dog1</span>
+                    <span class="thumbnails-title">dog6</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog2.jpg">
+                <a class="thumbnails-anchor" href="images/dog2.jpg" data-details-title="DOG7">
                     <img class="thumbnails-image" src="images/dog2.jpg" alt="dog2 image">
-                    <span class="thumbnails-title">dog2</span>
+                    <span class="thumbnails-title">dog7</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog3.jpg">
+                <a class="thumbnails-anchor" href="images/dog3.jpg" data-details-title="DOG8">
                     <img class="thumbnails-image" src="images/dog3.jpg" alt="dog3 image">
-                    <span class="thumbnails-title">dog3</span>
+                    <span class="thumbnails-title">dog8</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog4.jpg">
+                <a class="thumbnails-anchor" href="images/dog4.jpg" data-details-title="DOG9">
                     <img class="thumbnails-image" src="images/dog4.jpg" alt="dog4 image">
-                    <span class="thumbnails-title">dog4</span>
+                    <span class="thumbnails-title">dog9</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog5.jpg">
+                <a class="thumbnails-anchor" href="images/dog5.jpg" data-details-title="DOG10">
                     <img class="thumbnails-image" src="images/dog5.jpg" alt="dog5 image">
-                    <span class="thumbnails-title">dog5</span>
+                    <span class="thumbnails-title">dog10</span>
                 </a>
             </li>
         </ul>
@@ -86,5 +86,6 @@
         &copy; Copyright 2021
         <a href="http://tel-ran.com">Tel-Ran</a>
     </footer>
+    <script src="src/index.js"></script>
 </body>
 </html>
