--- a/index.html
+++ b/index.html
@@ -16,68 +16,68 @@
         <section class="details-container">
             <!-- <div class="details"> -->
                 <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
-                <span class="details-title">YYYYYYYY YYYYYYY YY</span>
+                <span class="details-title">Jack</span>
             <!-- </div> -->
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog1.jpg" data-details-title="DOG1">
+                <a class="thumbnails-anchor" href="images/dog1.jpg" data-details-title="Pretty boy">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
-                    <span class="thumbnails-title">dog1</span>
+                    <span class="thumbnails-title">Jack</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog2.jpg" data-details-title="DOG2">
+                <a class="thumbnails-anchor" href="images/dog2.jpg" data-details-title="Smart guy">
                     <img class="thumbnails-image" src="images/dog2.jpg" alt="dog2 image">
-                    <span class="thumbnails-title">dog2</span>
+                    <span class="thumbnails-title">Tucker</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog3.jpg" data-details-title="DOG3">
+                <a class="thumbnails-anchor" href="images/dog3.jpg" data-details-title="Curious boy">
                     <img class="thumbnails-image" src="images/dog3.jpg" alt="dog3 image">
-                    <span class="thumbnails-title">dog3</span>
+                    <span class="thumbnails-title">Cooper</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog4.jpg" data-details-title="DOG4">
+                <a class="thumbnails-anchor" href="images/dog4.jpg" data-details-title="Fluffy">
                     <img class="thumbnails-image" src="images/dog4.jpg" alt="dog4 image">
-                    <span class="thumbnails-title">dog4</span>
+                    <span class="thumbnails-title">Max</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog5.jpg" data-details-title="DOG5">
+                <a class="thumbnails-anchor" href="images/dog5.jpg" data-details-title="Shy boy">
                     <img class="thumbnails-image" src="images/dog5.jpg" alt="dog5 image">
-                    <span class="thumbnails-title">dog5</span>
+                    <span class="thumbnails-title">Milo</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog1.jpg" data-details-title="DOG6">
+                <a class="thumbnails-anchor" href="images/dog1.jpg" data-details-title="Pretty boy">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
-                    <span class="thumbnails-title">dog6</span>
+                    <span class="thumbnails-title">Jack</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog2.jpg" data-details-title="DOG7">
+                <a class="thumbnails-anchor" href="images/dog2.jpg" data-details-title="Smart guy">
                     <img class="thumbnails-image" src="images/dog2.jpg" alt="dog2 image">
-                    <span class="thumbnails-title">dog7</span>
+                    <span class="thumbnails-title">Tucker</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog3.jpg" data-details-title="DOG8">
+                <a class="thumbnails-anchor" href="images/dog3.jpg" data-details-title="Curious boy">
                     <img class="thumbnails-image" src="images/dog3.jpg" alt="dog3 image">
-                    <span class="thumbnails-title">dog8</span>
+                    <span class="thumbnails-title">Cooper</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog4.jpg" data-details-title="DOG9">
+                <a class="thumbnails-anchor" href="images/dog4.jpg" data-details-title="Fluffy">
                     <img class="thumbnails-image" src="images/dog4.jpg" alt="dog4 image">
-                    <span class="thumbnails-title">dog9</span>
+                    <span class="thumbnails-title">Max</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog5.jpg" data-details-title="DOG10">
+                <a class="thumbnails-anchor" href="images/dog5.jpg" data-details-title="Shy boy">
                     <img class="thumbnails-image" src="images/dog5.jpg" alt="dog5 image">
-                    <span class="thumbnails-title">dog10</span>
+                    <span class="thumbnails-title">Milo</span>
                 </a>
             </li>
         </ul>
