--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <header>
         <h2 class="logo-title">D o g r a m</h2>
     </header>
-    <main class="main-content">
+    <main class="main-content hidden">
         <section class="details-container">
-            <!-- <div class="details"> -->
                 <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
                 <span class="details-title">Jack</span>
-            <!-- </div> -->
+                <button class="hide-button" onclick="hideDetails()">hide details</button>
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
