--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 </head>
 <body>
     <header>
-        <h2 class="logo-title">D o g r a m</h2>
+        <h2 class="logo-title">D o g r a m</h2>         
     </header>
     <main class="main-content hidden">
         <section class="details-container">
+            <audio autoplay muted>
+                <source src="audio/dog1.ogg" type="audio/ogg">
+                <source src="audio/dog1.mp3" type="audio/mp3">
+                Your browser does not support the audio tag.
+            </audio>
                 <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
                 <span class="details-title">Jack</span>
                 <button class="hide-button" onclick="hideDetails()">hide details</button>
