--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
     </header>
     <main class="main-content hidden">
         <section class="details-container">
-            <audio autoplay muted>
-                <source src="audio/dog1.ogg" type="audio/ogg">
-                <source src="audio/dog1.mp3" type="audio/mp3">
-                Your browser does not support the audio tag.
-            </audio>
                 <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
                 <span class="details-title">Jack</span>
                 <button class="hide-button" onclick="hideDetails()">hide details</button>
@@ -28,60 +23,110 @@
                 <a class="thumbnails-anchor" href="images/dog1.jpg" data-details-title="Pretty boy">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
                     <span class="thumbnails-title">Jack</span>
+                    <audio>
+                        <source src="audio/Jack.ogg" type="audio/ogg">
+                        <source src="audio/Jack.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog2.jpg" data-details-title="Smart guy">
                     <img class="thumbnails-image" src="images/dog2.jpg" alt="dog2 image">
                     <span class="thumbnails-title">Tucker</span>
+                    <audio>
+                        <source src="audio/Tucker.ogg" type="audio/ogg">
+                        <source src="audio/Tucker.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog3.jpg" data-details-title="Curious boy">
                     <img class="thumbnails-image" src="images/dog3.jpg" alt="dog3 image">
                     <span class="thumbnails-title">Cooper</span>
+                    <audio>
+                        <source src="audio/Cooper.ogg" type="audio/ogg">
+                        <source src="audio/Cooper.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog4.jpg" data-details-title="Fluffy">
                     <img class="thumbnails-image" src="images/dog4.jpg" alt="dog4 image">
                     <span class="thumbnails-title">Max</span>
+                    <audio>
+                        <source src="audio/Max.ogg" type="audio/ogg">
+                        <source src="audio/Max.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog5.jpg" data-details-title="Shy boy">
                     <img class="thumbnails-image" src="images/dog5.jpg" alt="dog5 image">
                     <span class="thumbnails-title">Milo</span>
+                    <audio>
+                        <source src="audio/Milo.ogg" type="audio/ogg">
+                        <source src="audio/Milo.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog1.jpg" data-details-title="Pretty boy">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
                     <span class="thumbnails-title">Jack</span>
+                    <audio>
+                        <source src="audio/Jack.ogg" type="audio/ogg">
+                        <source src="audio/Jack.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog2.jpg" data-details-title="Smart guy">
                     <img class="thumbnails-image" src="images/dog2.jpg" alt="dog2 image">
                     <span class="thumbnails-title">Tucker</span>
+                    <audio>
+                        <source src="audio/Tucker.ogg" type="audio/ogg">
+                        <source src="audio/Tucker.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog3.jpg" data-details-title="Curious boy">
                     <img class="thumbnails-image" src="images/dog3.jpg" alt="dog3 image">
                     <span class="thumbnails-title">Cooper</span>
+                    <audio>
+                        <source src="audio/Cooper.ogg" type="audio/ogg">
+                        <source src="audio/Cooper.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog4.jpg" data-details-title="Fluffy">
                     <img class="thumbnails-image" src="images/dog4.jpg" alt="dog4 image">
                     <span class="thumbnails-title">Max</span>
+                    <audio>
+                        <source src="audio/Max.ogg" type="audio/ogg">
+                        <source src="audio/Max.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog5.jpg" data-details-title="Shy boy">
                     <img class="thumbnails-image" src="images/dog5.jpg" alt="dog5 image">
                     <span class="thumbnails-title">Milo</span>
+                    <audio>
+                        <source src="audio/Milo.ogg" type="audio/ogg">
+                        <source src="audio/Milo.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </a>
             </li>
         </ul>
